--- a/jaws/package.json
+++ b/jaws/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
+    "antd": "^5.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
